Solve day 6